--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "dependencies": {
     "angular": "^1.3.3",
+    "angular-animate": "^1.3.5",
     "angular-mocks": "^1.3.3",
-    "angular-resource": "^1.3.3",
-    "angular-new-router": "~0.0.2"
+    "angular-new-router": "~0.0.2",
+    "angular-resource": "^1.3.3"
   }
 }
